Heading Spacing Fix

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -160,7 +160,7 @@ body {
 					display: none;
 				}
 				h2, h3, h4 {
-					margin-top: $spacer * 1.5;
+					margin-top: $spacer * 3;
 				}
 			}
 		}
